Mon Sep 06 03:17:01 GMT 2010  Olly Betts <olly@survex.com>

	* perl/Makefile.am: Fix path to index.html in rule.

Mon Sep 06 02:43:47 GMT 2010  Olly Betts <olly@survex.com>

	* perl/t/: Update with newer testcases from Search::Xapian.

Mon Sep 06 02:27:35 GMT 2010  Olly Betts <olly@survex.com>

	* perl/Makefile.am: Build shared object as Xapian.la not xapian.la as
	  Perl looks for it capitalised.

Mon Sep 06 02:14:06 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: No need to m4 quote shell fragments without [] in.
	  Remove trailing ; from statements.

Mon Sep 06 02:07:11 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Whitespace tweaks.

Mon Sep 06 02:02:42 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Tweak help message for PERL_INC.

Sun Sep 05 23:24:05 GMT 2010  Olly Betts <olly@survex.com>

	* Merge Kosei's SWIG-based Perl bindings from GSoC 2009.

Sun Sep 05 12:55:13 GMT 2010  Olly Betts <olly@survex.com>

	* INSTALL: Fix typo ("Ruby" should be "Perl").

Sun Sep 05 12:49:20 GMT 2010  Olly Betts <olly@survex.com>

	* configure.ac: Remove accidentally added ';' from Ruby checks.

Fri Aug 14 16:45:44 GMT 2009  Kosei Moriyama <cou929@gmail.com>

	* perl/lib/:Add "1;" into end of lib/*.pm files.

Thu Aug 13 12:36:41 GMT 2009  Kosei Moriyama <cou929@gmail.com>

	* perl/util.i.in:Fix some lines and clean up code.

Wed Aug 12 14:11:49 GMT 2009  Kosei Moriyama <cou929@gmail.com>

	* INSTALL,perl/util.i.in:Add and fix some lines to describe
	SWIG based perl biding.

Wed Aug 12 12:59:30 GMT 2009  Kosei Moriyama <cou929@gmail.com>

	* perl/Makefile.am,perl/docs/index.html:Fix Makefile to
	generate docs/index.html from pod document of Search::Xapian.

Wed Aug 12 09:32:17 GMT 2009  Kosei Moriyama <cou929@gmail.com>

	* perl/util.i.in:Remove and replace some lines and clean
	up code.

Wed Aug 12 06:22:31 GMT 2009  Kosei Moriyama <cou929@gmail.com>

	* perl/Makefile.am,perl/lib/,perl/lib/MSet/Tied.pm,perl/lib/,